convertedToMDAPI/objects/PlantRoutingHub__c.object
<CustomObject>
    <label>Plant Routing Hub</label>
    <nameField>
        <displayFormat>PRH-{00000}</displayFormat>
        <label>PRH #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Routing Hubs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>HubAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Hub account for the routing</inlineHelpText>
        <label>Hub Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plant Routing Hubs (Hub Account)</relationshipLabel>
        <relationshipName>PlantRoutingHubsHub</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Sort Order</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessingOffset__c</fullName>
        <inlineHelpText>Processing Time at the Hub (in hours)</inlineHelpText>
        <label>Processing Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoutingAccount__c</fullName>
        <inlineHelpText>Account grouping the different routing hubs together</inlineHelpText>
        <label>Routing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plant Routing Hubs</relationshipLabel>
        <relationshipName>PlantRoutingHubs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TransitOffset__c</fullName>
        <inlineHelpText>Transit time (in hours)</inlineHelpText>
        <label>Transit Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>